awards session color updated

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -93,7 +93,7 @@ a {
   font-size: 17px;
 }
 .awards{
-  background-color: #FFE8EC;
+  background-color: #ffefb6;
   margin-top: 25px;
   padding: 20px;
   line-height: 1.5em;
